Striver A2Z: Sliding windows & 2 pointers - 3

--- a/study/striver-A2Z/16-sliding-window-and-2-pointers.ipynb
+++ b/study/striver-A2Z/16-sliding-window-and-2-pointers.ipynb
@@ -448,6 +448,7 @@
      "iopub.status.idle": "2024-06-04T15:59:41.194997Z",
      "shell.execute_reply": "2024-06-04T15:59:41.194576Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.008105,
      "end_time": "2024-06-04T15:59:41.196023",
@@ -460,7 +461,7 @@
    "outputs": [],
    "source": [
     "# https://leetcode.com/problems/fruit-into-baskets/submissions/1277567029\n",
-    "def sumSubarrayMins(fruits: list[int]):\n",
+    "def maxFruits(fruits: list[int]):\n",
     "    # Time: O(N), Space: O(1)\n",
     "    N = len(fruits)\n",
     "    indices: dict[int, int] = dict()\n",
@@ -483,9 +484,239 @@
     "    return max_length\n",
     "\n",
     "# Testing the solution\n",
-    "assert sumSubarrayMins([2,1,2]) == 3\n",
-    "assert sumSubarrayMins([0,1,2,2,2,2]) == 5\n",
-    "assert sumSubarrayMins([1,3,1,2,2,3,2]) == 4"
+    "assert maxFruits([2,1,2]) == 3\n",
+    "assert maxFruits([0,1,2,2,2,2]) == 5\n",
+    "assert maxFruits([1,3,1,2,2,3,2]) == 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea13d95c",
+   "metadata": {},
+   "source": [
+    "Longest substring with k distinct characters: https://www.naukri.com/code360/problems/distinct-characters_2221410\n",
+    "Video Link: https://youtu.be/teM9ZsVRQyc?si=FMHKeYm3rvkCu0GG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5116cf4c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def kDistinctChars(S: str, K: int):\n",
+    "    \"\"\"\n",
+    "    Although it is possible to use the same code as above, finding the min index to shift right might take O(24) time.\n",
+    "    Better to use striver's implementation of the same problem.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    N = len(S)\n",
+    "    max_ = i = 0\n",
+    "    freq: dict[str, int] = dict()\n",
+    "    for j in range(N):\n",
+    "        freq[S[j]] = freq.get(S[j], 0) + 1\n",
+    "\n",
+    "        # Expand\n",
+    "        if len(freq) <= K:\n",
+    "            max_ = max(max_, j - i + 1)\n",
+    "\n",
+    "        # Slide\n",
+    "        else:\n",
+    "            freq[S[i]] -= 1\n",
+    "            if freq[S[i]] == 0:\n",
+    "                freq.pop(S[i])\n",
+    "            i += 1\n",
+    "\n",
+    "    return max_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert kDistinctChars(\"abbbbbbc\", 2) == 7\n",
+    "assert kDistinctChars(\"abcddefg\", 3) == 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34efbc74",
+   "metadata": {},
+   "source": [
+    "Number of substrings containing all 3 characters\n",
+    "Video link: https://youtu.be/xtqN4qlgr8s?si=T_1Xp0aNnlf_pQzn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23e9154b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/number-of-substrings-containing-all-three-characters/submissions/1277998565\n",
+    "def numberOfSubstrings(S: str) -> int:\n",
+    "    \"\"\"\n",
+    "    Increase J until we find a valid sequence, everything to the right is also valid\n",
+    "    Try shrinking left (increasing i) to see if it is valid, if it is everything to the right is also valid\n",
+    "\n",
+    "    Time: O(2N), Space: O(3)\n",
+    "    \"\"\"\n",
+    "    N = len(S)\n",
+    "    freq: dict[str, int] = {S[0]: 1}\n",
+    "    count = i = j = 0\n",
+    "    while j < N:\n",
+    "        if len(freq) == 3:\n",
+    "            count += N - j\n",
+    "            freq[S[i]] -= 1\n",
+    "            if freq[S[i]] == 0:\n",
+    "                freq.pop(S[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            j += 1\n",
+    "            if j < N:\n",
+    "                freq[S[j]] = freq.get(S[j], 0) + 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfSubstrings(\"abcabc\") == 10\n",
+    "assert numberOfSubstrings(\"aaacb\") == 3\n",
+    "assert numberOfSubstrings(\"abc\") == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3d190d8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/number-of-substrings-containing-all-three-characters/submissions/1278006815\n",
+    "def numberOfSubstringsStriver(S: str) -> int:\n",
+    "    \"\"\"\n",
+    "    At every index we keep track of the last seen index for each character a, b, c -> last_seen\n",
+    "    Find the minimial window uptil which the window was valid - min(last_seen.values()) -> i\n",
+    "    Every substring to the left of our minimal window would have still been valid: count += i + 1\n",
+    "\n",
+    "    Time: O(N), Space: O(3)\n",
+    "    \"\"\"\n",
+    "    N, count = len(S), 0\n",
+    "    last_seen: dict[str, int] = {\"a\": -1, \"b\": -1, \"c\": -1}\n",
+    "    for i in range(N):\n",
+    "        last_seen[S[i]] = i\n",
+    "        count += min(last_seen.values()) + 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfSubstringsStriver(\"abcabc\") == 10\n",
+    "assert numberOfSubstringsStriver(\"aaacb\") == 3\n",
+    "assert numberOfSubstringsStriver(\"abc\") == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52f58033",
+   "metadata": {},
+   "source": [
+    "Longest repeating character replacement\n",
+    "Video Link: https://youtu.be/_eNhaDCr6P0?si=bsYcEmV-N7yOOh1z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91b23fa8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/longest-repeating-character-replacement/submissions/1278607910\n",
+    "def characterReplacement(S: str, K: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Logic: Given a string 'AAABBC', minimum conversions required would be length - maxfreq\n",
+    "    \"\"\"\n",
+    "    N, max_length = len(S), 0\n",
+    "    freq: list[int] = [0 for i in range(26)]\n",
+    "\n",
+    "    i = j = 0\n",
+    "    while j < N:\n",
+    "\n",
+    "        # Expand\n",
+    "        if (j - i + 1) - max(freq) <= K:\n",
+    "            max_length = max(max_length, j - i + 1)\n",
+    "\n",
+    "        # Slide\n",
+    "        else:\n",
+    "            freq[ord(S[i]) - ord('A')] -= 1\n",
+    "            i += 1\n",
+    "\n",
+    "        j += 1\n",
+    "        if j < N:\n",
+    "            freq[ord(S[j]) - ord('A')] += 1\n",
+    "\n",
+    "    return max_length\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert characterReplacement(\"ABAB\", 2) == 4\n",
+    "assert characterReplacement(\"AABABBA\", 1) == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35170d83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/longest-repeating-character-replacement/submissions/1278630543\n",
+    "def characterReplacementStriver(S: str, K: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Max freq variable keeps track of the maximum frequency.\n",
+    "\n",
+    "    We increase it each time we increment j.\n",
+    "    We can rescan during the times we decrement i, however since we are trying to find\n",
+    "    a length that is larger than the current largest, we can skip rescanning during the decrement portion.\n",
+    "\n",
+    "    5 (length) - 3 (max_freq) <= 2 (K) => VALID\n",
+    "\n",
+    "    We are trying to find length - 6, 7, 8, ..\n",
+    "    max_freq if decreased would tend to make the window invalid\n",
+    "\n",
+    "    6 (length) - 2 (max_freq) > 4 (K) => INVALID\n",
+    "    \"\"\"\n",
+    "    N, max_length = len(S), 0\n",
+    "    freq: list[int] = [0 for i in range(26)]\n",
+    "    freq[ord(S[0]) - ord('A')] += 1\n",
+    "    max_freq = 1\n",
+    "\n",
+    "    i = j = 0\n",
+    "    while j < N:\n",
+    "\n",
+    "        # Expand\n",
+    "        if (j - i + 1) - max_freq <= K:\n",
+    "            max_length = max(max_length, j - i + 1)\n",
+    "\n",
+    "        # Slide\n",
+    "        else:\n",
+    "            freq[ord(S[i]) - ord('A')] -= 1\n",
+    "            i += 1\n",
+    "\n",
+    "        j += 1\n",
+    "        if j < N:\n",
+    "            freq[ord(S[j]) - ord('A')] += 1\n",
+    "            max_freq = max(max_freq, freq[ord(S[j]) - ord('A')])\n",
+    "\n",
+    "    return max_length\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert characterReplacementStriver(\"ABAB\", 2) == 4\n",
+    "assert characterReplacementStriver(\"AABABBA\", 1) == 4"
    ]
   }
  ],
