Striver A2Z: Sliding windows & 2 pointers - 4

--- a/study/striver-A2Z/16-sliding-window-and-2-pointers.ipynb
+++ b/study/striver-A2Z/16-sliding-window-and-2-pointers.ipynb
@@ -761,6 +761,7 @@
      "iopub.status.idle": "2024-06-05T17:23:03.357589Z",
      "shell.execute_reply": "2024-06-05T17:23:03.357165Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.00896,
      "end_time": "2024-06-05T17:23:03.358646",
@@ -815,6 +816,110 @@
     "# Testing the solution\n",
     "assert characterReplacementStriver(\"ABAB\", 2) == 4\n",
     "assert characterReplacementStriver(\"AABABBA\", 1) == 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98ae4a30",
+   "metadata": {},
+   "source": [
+    "Count binary arrays with sum: https://leetcode.com/problems/binary-subarrays-with-sum/\n",
+    "Video Link: https://youtu.be/XnMdNUkX6VM?si=Ln4lCZRl4UNUFHdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43e17995",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def numSubarraysWithSumBrute(nums: list[int], goal: int) -> int:\n",
+    "    N, count = len(nums), 0\n",
+    "    for i in range(N):\n",
+    "        sum_ = 0\n",
+    "        for j in range(i, N):\n",
+    "            sum_ += nums[j]\n",
+    "            if sum_ == goal:\n",
+    "                count += 1\n",
+    "            elif sum_ > goal:\n",
+    "                break\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numSubarraysWithSumBrute([1,0,1,0,1], 2) == 4\n",
+    "assert numSubarraysWithSumBrute([0,0,0,0,0], 0) == 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cc52060",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/submissions/detail/1279702194/\n",
+    "def numSubarraysWithSumBetter(nums: list[int], goal: int) -> int:\n",
+    "    \"\"\"\n",
+    "    A better solution using prefix sum - count arrays with sum equals K\n",
+    "\n",
+    "    1. For each n in arr, increment prefix_sum += n\n",
+    "    2. If target - prefix_sum had existed in hashmap, increase count by the number of times target - pf occured.\n",
+    "    3. Increment prefix_sum in hashmap by 1\n",
+    "\n",
+    "    Time: O(N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    # Store count of times that 'x' has occured\n",
+    "    hm: dict[int, int] = {0: 1}\n",
+    "    count = prefix_sum = 0\n",
+    "\n",
+    "    for n in nums:\n",
+    "        prefix_sum += n\n",
+    "        count += hm.get(prefix_sum - goal, 0)\n",
+    "        hm[prefix_sum] = hm.get(prefix_sum, 0) + 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numSubarraysWithSumBetter([1,0,1,0,1], 2) == 4\n",
+    "assert numSubarraysWithSumBetter([0,0,0,0,0], 0) == 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d2c7d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/submissions/detail/1279747938\n",
+    "def numSubarraysWithSumOptimal(nums: list[int], goal: int) -> int:\n",
+    "    \"\"\"\n",
+    "    When checking for sum equivalent to goal, we wouldn't know whether to shrink or to expand\n",
+    "    Hence we modify the problem to find the count of subarrays <= goal\n",
+    "    \"\"\"\n",
+    "    def countSubArraysLTE(K: int) -> int:\n",
+    "        count = sum_ = i = j = 0\n",
+    "        while j < N:\n",
+    "            sum_ += nums[j]\n",
+    "            while i < N and sum_ > K:\n",
+    "                sum_ -= nums[i]\n",
+    "                i += 1\n",
+    "            count += j - i + 1\n",
+    "            j += 1\n",
+    "\n",
+    "        return count\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    return countSubArraysLTE(goal) - (countSubArraysLTE(goal - 1) if goal > 0 else 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numSubarraysWithSumOptimal([1,0,1,0,1], 2) == 4\n",
+    "assert numSubarraysWithSumOptimal([0,0,0,0,0], 0) == 15"
    ]
   }
  ],
