Striver A2Z: Sliding windows & 2 pointers - 5
Completed with Sliding windows and pointers playlist
Should be starting with the greedy playlist

--- a/study/striver-A2Z/16-sliding-window-and-2-pointers.ipynb
+++ b/study/striver-A2Z/16-sliding-window-and-2-pointers.ipynb
@@ -937,6 +937,7 @@
      "iopub.status.idle": "2024-06-06T17:02:58.432786Z",
      "shell.execute_reply": "2024-06-06T17:02:58.432291Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009039,
      "end_time": "2024-06-06T17:02:58.433828",
@@ -972,6 +973,228 @@
     "# Testing the solution\n",
     "assert numSubarraysWithSumOptimal([1,0,1,0,1], 2) == 4\n",
     "assert numSubarraysWithSumOptimal([0,0,0,0,0], 0) == 15"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76a28505",
+   "metadata": {},
+   "source": [
+    "Count number of nice subarrays: https://leetcode.com/problems/count-number-of-nice-subarrays/\n",
+    "Video Link: https://youtu.be/j_QOv9OT9Og?si=bx1OWjbu3VXTIZhw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b13204ae",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/count-number-of-nice-subarrays/submissions/1280053394\n",
+    "def numberOfSubarrays(nums: list[int], K: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Exact same logic as the previous question.\n",
+    "    Time: O(2N + 2N) ~ O(N), Space: O(1)\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "    def countSubArrays(k_: int) -> int:\n",
+    "        odd_count = count = i = j = 0\n",
+    "        while j < N:\n",
+    "            odd_count += nums[j] % 2\n",
+    "            while odd_count > k_:\n",
+    "                odd_count -= nums[i] % 2\n",
+    "                i += 1\n",
+    "            count += j - i + 1\n",
+    "            j += 1\n",
+    "\n",
+    "        return count\n",
+    "\n",
+    "    return countSubArrays(K) - (countSubArrays(K - 1) if K > 0 else 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfSubarrays([1,1,2,1,1], 3) == 2\n",
+    "assert numberOfSubarrays([2,4,6], 1) == 0\n",
+    "assert numberOfSubarrays([2,2,2,1,2,2,1,2,2,2], 2) == 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6b4a5ed",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/count-number-of-nice-subarrays/submissions/1280056713\n",
+    "def numberOfSubarraysStriver(nums: list[int], K: int) -> int:\n",
+    "    \"\"\"\n",
+    "    [1,2,5,1,2,6,8], 3\n",
+    "\n",
+    "    Apply a modulo 2 op on all numbers and it becomes: [1,0,1,1,0,0,0], 3\n",
+    "    \"\"\"\n",
+    "    def countSubArrays(k_: int) -> int:\n",
+    "        count = sum_ = i = j = 0\n",
+    "        while j < N:\n",
+    "            sum_ += nums[j]\n",
+    "            while sum_ > k_:\n",
+    "                sum_ -= nums[i]\n",
+    "                i += 1\n",
+    "            count += j - i + 1\n",
+    "            j += 1\n",
+    "\n",
+    "        return count\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    nums = list(map(lambda x: x % 2, nums))\n",
+    "    return countSubArrays(K) - (countSubArrays(K - 1) if K > 0 else 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfSubarraysStriver([1,1,2,1,1], 3) == 2\n",
+    "assert numberOfSubarraysStriver([2,4,6], 1) == 0\n",
+    "assert numberOfSubarraysStriver([2,2,2,1,2,2,1,2,2,2], 2) == 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19220f01",
+   "metadata": {},
+   "source": [
+    "Subarrays with K different integers: https://leetcode.com/problems/subarrays-with-k-different-integers/description/\n",
+    "Video Link: https://youtu.be/7wYGbV_LsX4?si=m-cqYxni-iCnE80S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3162b8cb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/subarrays-with-k-different-integers/submissions/1280064513\n",
+    "def subarraysWithKDistinct(nums: list[int], K: int) -> int:\n",
+    "    \"\"\"Time: O(N), Space: O(N)\"\"\"\n",
+    "    def countGoodSubArrays(k_: int) -> int:\n",
+    "        count = i = j = 0\n",
+    "        freq: dict[int, int] = dict()\n",
+    "        while j < N:\n",
+    "            freq[nums[j]] = freq.get(nums[j], 0) + 1\n",
+    "            while len(freq) > k_:\n",
+    "                freq[nums[i]] = freq[nums[i]] - 1\n",
+    "                if freq[nums[i]] == 0:\n",
+    "                    freq.pop(nums[i])\n",
+    "                i += 1\n",
+    "            count += j - i + 1\n",
+    "            j += 1\n",
+    "\n",
+    "        return count\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    return countGoodSubArrays(K) - (countGoodSubArrays(K - 1) if K > 0 else 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert subarraysWithKDistinct([1,2,1,2,3], 2) == 7\n",
+    "assert subarraysWithKDistinct([1,2,1,3,4], 3) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43979531",
+   "metadata": {},
+   "source": [
+    "Minimum window substring: https://leetcode.com/problems/minimum-window-substring/\n",
+    "Video Link: https://youtu.be/WJaij9ffOIY?si=aCQufx9ALwI_84Z7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76ff34c1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minWindowBrute(s1: str, s2: str) -> str:\n",
+    "    # Time: O(N ** 2), Space: O(1)\n",
+    "    def included(freq: dict[str, int]) -> bool:\n",
+    "        for k, v in s2_freq.items():\n",
+    "            if k not in freq or v > freq[k]:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "    N1, N2 = len(s1), len(s2)\n",
+    "    s2_freq = collections.Counter(s2)\n",
+    "    min_ = N1 + N2, \"\"\n",
+    "    for i in range(N1):\n",
+    "        s1_freq: dict[str, int] = dict()\n",
+    "        for j in range(i, N1):\n",
+    "            s1_freq[s1[j]] = s1_freq.get(s1[j], 0) + 1\n",
+    "            if min_[0] > j - i + 1 and included(s1_freq):\n",
+    "                min_ = j - i + 1, s1[i: j + 1]\n",
+    "\n",
+    "    return min_[1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minWindowBrute(\"ADOBECODEBANC\", \"ABC\") == \"BANC\"\n",
+    "assert minWindowBrute(\"a\", \"a\") == \"a\"\n",
+    "assert minWindowBrute(\"a\", \"aa\") == \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acd95ec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/minimum-window-substring/submissions/1280827554\n",
+    "def minWindow(s1: str, s2: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Maintain a dictionary marking the frequencies.\n",
+    "    Values greater than 0 indicate that the window is invalid.\n",
+    "    Values lesser than 0 indicate that the window size can be shrunk\n",
+    "    Values equal to 0 is hypothetically possible, the perfect window\n",
+    "    \"\"\"\n",
+    "    # Initialize values\n",
+    "    N1, N2 = len(s1), len(s2)\n",
+    "    window_char_match = i = j = 0\n",
+    "    start_idx, min_length = -1, N1 + N2\n",
+    "\n",
+    "    # Compute the frequency of the second substring\n",
+    "    freq: dict[str, int] = {}\n",
+    "    for n in s2:\n",
+    "        freq[n] = freq.get(n, 0) + 1\n",
+    "\n",
+    "    # If invalid, expand. If valid, try to shrink until it is no longer valid.\n",
+    "    # Slide with the size of the minimum window we had obtained\n",
+    "    while j < N1:\n",
+    "        if window_char_match < N2:\n",
+    "            freq[s1[j]] = freq.get(s1[j], 0) - 1\n",
+    "            if freq[s1[j]] >= 0:\n",
+    "                window_char_match += 1\n",
+    "        while window_char_match >= N2:\n",
+    "            if min_length > j - i + 1:\n",
+    "                min_length, start_idx = j - i + 1, i\n",
+    "            freq[s1[i]] = freq[s1[i]] + 1\n",
+    "            if freq[s1[i]] > 0:\n",
+    "                window_char_match -= 1\n",
+    "            i += 1\n",
+    "\n",
+    "        # Long due to update, but for the sake of calc we update it at the end\n",
+    "        j += 1\n",
+    "\n",
+    "    return s1[start_idx: start_idx + min_length] if start_idx >= 0 else \"\"\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minWindow(\"ADOBECODEBANC\", \"ABC\") == \"BANC\"\n",
+    "assert minWindow(\"a\", \"a\") == \"a\"\n",
+    "assert minWindow(\"a\", \"aa\") == \"\""
    ]
   }
  ],
